tests/baselines/reference/subtypesOfTypeParameterWithRecursiveConstraints.errors.txt
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(66,11): error TS2415: Class 'D2<T, U, V>' incorrectly extends base class 'Base<T>'.
  Types of property 'foo' are incompatible.
    Type 'U' is not assignable to type 'T'.
      Type 'Foo<T>' is not assignable to type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(68,9): error TS2411: Property 'foo' of type 'U' is not assignable to string index type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(71,11): error TS2415: Class 'D3<T, U, V>' incorrectly extends base class 'Base<T>'.
  Types of property 'foo' are incompatible.
    Type 'V' is not assignable to type 'T'.
      Type 'Foo<V>' is not assignable to type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(73,9): error TS2411: Property 'foo' of type 'V' is not assignable to string index type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(76,11): error TS2415: Class 'D4<T, U, V>' incorrectly extends base class 'Base<U>'.
  Types of property 'foo' are incompatible.
    Type 'T' is not assignable to type 'U'.
      Type 'Foo<U>' is not assignable to type 'U'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(78,9): error TS2411: Property 'foo' of type 'T' is not assignable to string index type 'U'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(86,11): error TS2415: Class 'D6<T, U, V>' incorrectly extends base class 'Base<U>'.
  Types of property 'foo' are incompatible.
    Type 'V' is not assignable to type 'U'.
      Type 'Foo<V>' is not assignable to type 'U'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(88,9): error TS2411: Property 'foo' of type 'V' is not assignable to string index type 'U'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(91,11): error TS2415: Class 'D7<T, U, V>' incorrectly extends base class 'Base<V>'.
  Types of property 'foo' are incompatible.
    Type 'T' is not assignable to type 'V'.
      Type 'Foo<U>' is not assignable to type 'V'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(93,9): error TS2411: Property 'foo' of type 'T' is not assignable to string index type 'V'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(96,11): error TS2415: Class 'D8<T, U, V>' incorrectly extends base class 'Base<V>'.
  Types of property 'foo' are incompatible.
    Type 'U' is not assignable to type 'V'.
      Type 'Foo<T>' is not assignable to type 'V'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(98,9): error TS2411: Property 'foo' of type 'U' is not assignable to string index type 'V'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(113,11): error TS2415: Class 'D1<T, U, V>' incorrectly extends base class 'Base2<T>'.
  Types of property 'foo' are incompatible.
    Type 'T' is not assignable to type 'Foo<T>'.
      Type 'Foo<U>' is not assignable to type 'Foo<T>'.
        Type 'U' is not assignable to type 'T'.
          Type 'Foo<T>' is not assignable to type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(120,9): error TS2411: Property 'foo' of type 'U' is not assignable to string index type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(123,11): error TS2415: Class 'D3<T, U, V>' incorrectly extends base class 'Base2<T>'.
  Types of property 'foo' are incompatible.
    Type 'V' is not assignable to type 'Foo<T>'.
      Type 'Foo<V>' is not assignable to type 'Foo<T>'.
        Type 'V' is not assignable to type 'T'.
          Type 'Foo<V>' is not assignable to type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(125,9): error TS2411: Property 'foo' of type 'V' is not assignable to string index type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(130,9): error TS2411: Property 'foo' of type 'T' is not assignable to string index type 'U'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(133,11): error TS2415: Class 'D5<T, U, V>' incorrectly extends base class 'Base2<U>'.
  Types of property 'foo' are incompatible.
    Type 'U' is not assignable to type 'Foo<U>'.
      Type 'Foo<T>' is not assignable to type 'Foo<U>'.
        Type 'T' is not assignable to type 'U'.
          Type 'Foo<U>' is not assignable to type 'U'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(138,11): error TS2415: Class 'D6<T, U, V>' incorrectly extends base class 'Base2<U>'.
  Types of property 'foo' are incompatible.
    Type 'V' is not assignable to type 'Foo<U>'.
      Type 'Foo<V>' is not assignable to type 'Foo<U>'.
        Type 'V' is not assignable to type 'U'.
          Type 'Foo<V>' is not assignable to type 'U'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(140,9): error TS2411: Property 'foo' of type 'V' is not assignable to string index type 'U'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(143,11): error TS2415: Class 'D7<T, U, V>' incorrectly extends base class 'Base2<V>'.
  Types of property 'foo' are incompatible.
    Type 'T' is not assignable to type 'Foo<V>'.
      Type 'Foo<U>' is not assignable to type 'Foo<V>'.
        Type 'U' is not assignable to type 'V'.
          Type 'Foo<T>' is not assignable to type 'V'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(145,9): error TS2411: Property 'foo' of type 'T' is not assignable to string index type 'V'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(148,11): error TS2415: Class 'D8<T, U, V>' incorrectly extends base class 'Base2<V>'.
  Types of property 'foo' are incompatible.
    Type 'U' is not assignable to type 'Foo<V>'.
      Type 'Foo<T>' is not assignable to type 'Foo<V>'.
        Type 'T' is not assignable to type 'V'.
          Type 'Foo<U>' is not assignable to type 'V'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts(150,9): error TS2411: Property 'foo' of type 'U' is not assignable to string index type 'V'.


==== tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypesOfTypeParameterWithRecursiveConstraints.ts (24 errors) ====
    // checking whether other types are subtypes of type parameters with constraints
    
    class Foo<T> { foo: T; }
    function f<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>>(t: T, u: U, v: V) {
        // ok
        var r1 = true ? t : u;
        var r1 = true ? u : t;
    
        // ok
        var r2 = true ? t : v;
        var r2 = true ? v : t;
    
        // ok
        var r3 = true ? v : u;
        var r3 = true ? u : v;
    
        // ok
        var r4 = true ? t : new Foo<T>();
        var r4 = true ? new Foo<T>() : t;
    
        // ok
        var r5 = true ? u : new Foo<T>();
        var r5 = true ? new Foo<T>() : u;
    
        // ok
        var r6 = true ? v : new Foo<T>();
        var r6 = true ? new Foo<T>() : v;
    
    
        // ok
        var r7 = true ? t : new Foo<U>();
        var r7 = true ? new Foo<U>() : t;
    
        // ok
        var r8 = true ? u : new Foo<U>();
        var r8 = true ? new Foo<U>() : u;
    
        // ok
        var r9 = true ? v : new Foo<U>();
        var r9 = true ? new Foo<U>() : v;
    
    
        // ok
        var r10 = true ? t : new Foo<V>();
        var r10 = true ? new Foo<V>() : t;
    
        // ok
        var r11 = true ? u : new Foo<V>();
        var r11 = true ? new Foo<V>() : u;
    
        // ok
        var r12 = true ? v : new Foo<V>();
        var r12 = true ? new Foo<V>() : v;
    }
    
    module M1 {
        class Base<T> {
            foo: T;
        }
    
        class D1<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base<T> {
            [x: string]: T;
            foo: T
        }
    
        class D2<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base<T> {
              ~~
!!! error TS2415: Class 'D2<T, U, V>' incorrectly extends base class 'Base<T>'.
!!! error TS2415:   Types of property 'foo' are incompatible.
!!! error TS2415:     Type 'U' is not assignable to type 'T'.
!!! error TS2415:       Type 'Foo<T>' is not assignable to type 'T'.
            [x: string]: T;
            foo: U
            ~~~~~~
!!! error TS2411: Property 'foo' of type 'U' is not assignable to string index type 'T'.
        }
    
        class D3<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base<T> {
              ~~
!!! error TS2415: Class 'D3<T, U, V>' incorrectly extends base class 'Base<T>'.
!!! error TS2415:   Types of property 'foo' are incompatible.
!!! error TS2415:     Type 'V' is not assignable to type 'T'.
!!! error TS2415:       Type 'Foo<V>' is not assignable to type 'T'.
            [x: string]: T;
            foo: V
            ~~~~~~
!!! error TS2411: Property 'foo' of type 'V' is not assignable to string index type 'T'.
        }
    
        class D4<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base<U> {
              ~~
!!! error TS2415: Class 'D4<T, U, V>' incorrectly extends base class 'Base<U>'.
!!! error TS2415:   Types of property 'foo' are incompatible.
!!! error TS2415:     Type 'T' is not assignable to type 'U'.
!!! error TS2415:       Type 'Foo<U>' is not assignable to type 'U'.
            [x: string]: U;
            foo: T
            ~~~~~~
!!! error TS2411: Property 'foo' of type 'T' is not assignable to string index type 'U'.
        }
    
        class D5<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base<U> {
            [x: string]: U;
            foo: U
        }
    
        class D6<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base<U> {
              ~~
!!! error TS2415: Class 'D6<T, U, V>' incorrectly extends base class 'Base<U>'.
!!! error TS2415:   Types of property 'foo' are incompatible.
!!! error TS2415:     Type 'V' is not assignable to type 'U'.
!!! error TS2415:       Type 'Foo<V>' is not assignable to type 'U'.
            [x: string]: U;
            foo: V
            ~~~~~~
!!! error TS2411: Property 'foo' of type 'V' is not assignable to string index type 'U'.
        }
    
        class D7<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base<V> {
              ~~
!!! error TS2415: Class 'D7<T, U, V>' incorrectly extends base class 'Base<V>'.
!!! error TS2415:   Types of property 'foo' are incompatible.
!!! error TS2415:     Type 'T' is not assignable to type 'V'.
!!! error TS2415:       Type 'Foo<U>' is not assignable to type 'V'.
            [x: string]: V;
            foo: T
            ~~~~~~
!!! error TS2411: Property 'foo' of type 'T' is not assignable to string index type 'V'.
        }
    
        class D8<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base<V> {
              ~~
!!! error TS2415: Class 'D8<T, U, V>' incorrectly extends base class 'Base<V>'.
!!! error TS2415:   Types of property 'foo' are incompatible.
!!! error TS2415:     Type 'U' is not assignable to type 'V'.
!!! error TS2415:       Type 'Foo<T>' is not assignable to type 'V'.
            [x: string]: V;
            foo: U
            ~~~~~~
!!! error TS2411: Property 'foo' of type 'U' is not assignable to string index type 'V'.
        }
    
        class D9<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base<V> {
            [x: string]: V;
            foo: V
        }
    }
    
    
    module M2 {
        class Base2<T> {
            foo: Foo<T>;
        }
    
        class D1<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base2<T> {
              ~~
!!! error TS2415: Class 'D1<T, U, V>' incorrectly extends base class 'Base2<T>'.
!!! error TS2415:   Types of property 'foo' are incompatible.
!!! error TS2415:     Type 'T' is not assignable to type 'Foo<T>'.
!!! error TS2415:       Type 'Foo<U>' is not assignable to type 'Foo<T>'.
!!! error TS2415:         Type 'U' is not assignable to type 'T'.
!!! error TS2415:           Type 'Foo<T>' is not assignable to type 'T'.
            [x: string]: T;
            foo: T
        }
    
        class D2<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base2<T> {
            [x: string]: T;
            foo: U
            ~~~~~~
!!! error TS2411: Property 'foo' of type 'U' is not assignable to string index type 'T'.
        }
    
        class D3<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base2<T> {
              ~~
!!! error TS2415: Class 'D3<T, U, V>' incorrectly extends base class 'Base2<T>'.
!!! error TS2415:   Types of property 'foo' are incompatible.
!!! error TS2415:     Type 'V' is not assignable to type 'Foo<T>'.
!!! error TS2415:       Type 'Foo<V>' is not assignable to type 'Foo<T>'.
!!! error TS2415:         Type 'V' is not assignable to type 'T'.
!!! error TS2415:           Type 'Foo<V>' is not assignable to type 'T'.
            [x: string]: T;
            foo: V
            ~~~~~~
!!! error TS2411: Property 'foo' of type 'V' is not assignable to string index type 'T'.
        }
    
        class D4<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base2<U> {
            [x: string]: U;
            foo: T
            ~~~~~~
!!! error TS2411: Property 'foo' of type 'T' is not assignable to string index type 'U'.
        }
    
        class D5<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base2<U> {
              ~~
!!! error TS2415: Class 'D5<T, U, V>' incorrectly extends base class 'Base2<U>'.
!!! error TS2415:   Types of property 'foo' are incompatible.
!!! error TS2415:     Type 'U' is not assignable to type 'Foo<U>'.
!!! error TS2415:       Type 'Foo<T>' is not assignable to type 'Foo<U>'.
!!! error TS2415:         Type 'T' is not assignable to type 'U'.
!!! error TS2415:           Type 'Foo<U>' is not assignable to type 'U'.
            [x: string]: U;
            foo: U
        }
    
        class D6<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base2<U> {
              ~~
!!! error TS2415: Class 'D6<T, U, V>' incorrectly extends base class 'Base2<U>'.
!!! error TS2415:   Types of property 'foo' are incompatible.
!!! error TS2415:     Type 'V' is not assignable to type 'Foo<U>'.
!!! error TS2415:       Type 'Foo<V>' is not assignable to type 'Foo<U>'.
!!! error TS2415:         Type 'V' is not assignable to type 'U'.
!!! error TS2415:           Type 'Foo<V>' is not assignable to type 'U'.
            [x: string]: U;
            foo: V
            ~~~~~~
!!! error TS2411: Property 'foo' of type 'V' is not assignable to string index type 'U'.
        }
    
        class D7<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base2<V> {
              ~~
!!! error TS2415: Class 'D7<T, U, V>' incorrectly extends base class 'Base2<V>'.
!!! error TS2415:   Types of property 'foo' are incompatible.
!!! error TS2415:     Type 'T' is not assignable to type 'Foo<V>'.
!!! error TS2415:       Type 'Foo<U>' is not assignable to type 'Foo<V>'.
!!! error TS2415:         Type 'U' is not assignable to type 'V'.
!!! error TS2415:           Type 'Foo<T>' is not assignable to type 'V'.
            [x: string]: V;
            foo: T
            ~~~~~~
!!! error TS2411: Property 'foo' of type 'T' is not assignable to string index type 'V'.
        }
    
        class D8<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base2<V> {
              ~~
!!! error TS2415: Class 'D8<T, U, V>' incorrectly extends base class 'Base2<V>'.
!!! error TS2415:   Types of property 'foo' are incompatible.
!!! error TS2415:     Type 'U' is not assignable to type 'Foo<V>'.
!!! error TS2415:       Type 'Foo<T>' is not assignable to type 'Foo<V>'.
!!! error TS2415:         Type 'T' is not assignable to type 'V'.
!!! error TS2415:           Type 'Foo<U>' is not assignable to type 'V'.
            [x: string]: V;
            foo: U
            ~~~~~~
!!! error TS2411: Property 'foo' of type 'U' is not assignable to string index type 'V'.
        }
    
        class D9<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base2<V> {
            [x: string]: V;
            foo: V
        }
    }